--- a/app/views/shared/_tab_nav.html.haml
+++ b/app/views/shared/_tab_nav.html.haml
@@ -1,7 +1,7 @@
 -# app/views/shared/_tab_nav.html.haml
-.sticky-top.bg-white.border-bottom.py-3{ style: "top: 50px; z-index: 1010;" }
+.sticky-top.bg-light.border-bottom.py-3{ style: "top: 50px; z-index: 1010;" }
   .mx-3.mx-md-5
-    .d-flex.align-items-center.flex-wrap.gap-2
+    .d-flex.justify-content-center.align-items-center.flex-wrap.gap-2
       %small.text-uppercase.fw-bold.text-muted.me-2 Jump To:
       
       - links.each do |link|
