--- a/app/views/communities/electric_rates_sales/_rates.html.haml
+++ b/app/views/communities/electric_rates_sales/_rates.html.haml
@@ -7,7 +7,7 @@
 
 .mb-5
   .p-3.border.rounded.bg-light.mb-3
-    = render "communities/tabs/#{parent_tab}/rates/historical_rate_chart"
+    = render "communities/#{parent_tab}/rates/historical_rate_chart"
 
 .mb-3
-  = render "communities/tabs/#{parent_tab}/rates/data"
+  = render "communities/#{parent_tab}/rates/data"
