Fix full refresh by removing 'turbo_frame: :_top', add stimulus controller to scroll to top of window on turbo frame render (autoscroll did only scrolls partially)

--- a/app/views/communities/_sticky_toolbar.html.haml
+++ b/app/views/communities/_sticky_toolbar.html.haml
@@ -23,7 +23,7 @@
             - if tab[:visible]
               %li.nav-item
                 = link_to tab[:label], tab[:path], 
-                          data: { turbo_frame: "community_tab_content", turbo_action: "advance", turbo_frame: :_top }, 
+                          data: { turbo_frame: "community_tab_content", turbo_action: "advance"}, 
                           class: "nav-link"
 
       .col-auto
